using System;
using Avalonia.Controls;

namespace Chess_DB.Views
{
    public partial class CompetitionWindow : Window
    {
        public CompetitionWindow()
        {

        }
    }
}